# squish

./: .coverage  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PHASE_3_4_COMPLETION_GUIDE.md  PLAN.md  README.md  SECURITY.md  SUPPORT.md  cli.py  compressed_loader.py  coverage.json  index.html  install.sh  launch_eval.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  upload_weights.yml
ARCHITECTURE/: index.html
Formula/: squish.rb
RESULTS/: index.html
ancf_cli/: Cargo.toml
ancf_cli/src/: main.rs
ancf_codecs/: Cargo.toml
ancf_codecs/src/: lib.rs  lz4_codec.rs  passthrough.rs  zstd_codec.rs
ancf_core/: Cargo.toml
ancf_core/src/: codec.rs  format.rs  lib.rs  reader.rs  writer.rs
ancf_core/tests/: integration.rs
announcements/: index.html
api/: index.html
bench/: bench_lm_eval_opt.py  bench_ollama.py  bench_quantizer.py  bench_vectorized.py  bench_zipnn.py  benchmark.py  benchmark_comparison.py
benchmark_2bit/: index.html
benchmark_multi_model/: index.html
benchmark_wave13_14/: index.html
benchmark_wave23_24/: index.html
benchmark_wave25_26/: index.html
changelog/: index.html
contributing/: index.html
demos/: run_inference.py  tool_calling_demo.py
dev/: _update_bench_docs.py  community_posts.md
dev/benchmarks/: README.md  _check_health.py  _run_all.py  _wait_ready.py  _warmup.py  bench_agent_8b.py  bench_commit.py  bench_eoe.py  bench_optimizations.py  bench_wave13_14.py  bench_wave17_18.py  bench_wave25_26.py
dev/configs/: Modelfile.llama3.1  aider.yml  continue.json  litellm.yaml
dev/demos/: record_demo.py  record_v5_demo.py  record_v6_demo.py  record_v9_demo.py  record_wave12_demo.py  record_wave13_14_demo.py  squish-wave12-demo.cast  squish-wave13-14-demo.cast  tool_calling_demo.py
dev/results/: _test_suite_ref.json  wave13_14_bench.json  wave15_16_bench.json
dev/scripts/: add_pragmas.py  add_pragmas2.py  generate_paper.py  launch_eval.py  upload_to_hub.py
dev/tools/: README.md  monitor_eval.py  pull_model.py  verify.py  verify_7b_load.py  wait_eval_14b.py
docs/: ARCHITECTURE.md  RESULTS.md  Squish_Action_Plan (1).docx  api.md  benchmark_2bit.md  benchmark_guide.md  benchmark_multi_model.json  benchmark_multi_model.md  benchmark_wave13_14.md  benchmark_wave15_16.md  benchmark_wave17_18.md  index.md  install.md  quickstart.md
docs/stylesheets/: extra.css
evals/: repeatability_14b.py  repeatability_7b.py  run_eval.py  run_inference.py  run_poc.py  run_reference.py
install/: index.html
paper/: index.html
quickstart/: index.html
results/: _test_suite_comp.json  _test_suite_prompts.json  bench_ollama_results.json  compressed_output.json  reference_output.json
scripts/: install.sh  run_eval_14b.sh  run_eval_14b_v2.sh
search/: search_index.json
squish/: __init__.py  _term.py  act_sparsity.py  activation_offload.py  ada_serve.py  adaptive_batcher.py  adaptive_budget.py  ane_profiler.py  audit_logger.py  awq.py  backend.py  batch_embed.py  catalog.py  chunked_prefill.py  cla.py  clasp.py  cli.py  compressed_loader.py  conf_spec.py  context_summarizer.py  continuous_batching.py  convert.py  del_decoder.py  diffkv.py  disagg_prefill.py  distil_spec.py  dovetail.py  dual_chunk_attn.py  duo_decoding.py  eagle3.py  entropy.py  fault_tolerance.py  flash_attention.py  flash_decode.py  flash_mla.py  forelen.py  fp8_quant.py  fused_kernels.py  fused_rmsnorm.py  fused_sampler.py  (+85 more)
squish/benchmarks/: __init__.py  agent_bench.py  base.py  code_bench.py  compare.py  perf_bench.py  quality_bench.py  report.py  tool_bench.py
squish/benchmarks/data/: agent_scenarios.json  tool_schemas.json
squish/static/: index.html
squish_quant_rs/: Cargo.toml  README.md  pyproject.toml
squish_quant_rs/src/: lib.rs
tests/: conftest.py  test_agent_preset_unit.py  test_ane_profiler_unit.py  test_awq_extended.py  test_awq_unit.py  test_bench_agent.py  test_bench_cli.py  test_bench_code.py  test_bench_perf.py  test_bench_quality.py  test_bench_tool.py  test_block_expert_archive_unit.py  test_catalog_branches.py  test_catalog_extended.py  test_catalog_unit.py  test_chunked_prefill.py  test_cla_unit.py  test_clasp_unit.py  test_cli_extras.py  test_cli_unit.py  test_comm_vq_unit.py  test_compressed_loader_unit.py  test_continuous_batching_unit.py  test_del_decoder_unit.py  test_disc_router_unit.py  test_dovetail_unit.py  test_duo_decoding_unit.py  test_entropy_branches.py  test_entropy_extended.py  test_entropy_unit.py  test_fault_tolerance_unit.py  test_forelen_unit.py  test_fsm_gamma_unit.py  test_fused_kernels_unit.py  test_gemfilter_unit.py  test_git_integration.py  test_hadamard_kvcache_unit.py  test_head_infer_unit.py  test_hetero_vocab_sd_unit.py  test_int4_loader.py  (+78 more)
tools/: README.md  compress_weights.py  gen_manifest.py  monitor_eval.py  pull_model.py  test_eval_14b.py  test_interface.py  verify.py  verify_7b_load.py  verify_no_tensors.py
