[workspace]
members = ["ancf_core", "ancf_codecs", "ancf_cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13"
lz4_flex = "0.11"
clap = { version = "4", features = ["derive"] }
