[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "squish"
version = "1.0.0"
description = "Fast compressed model loader and OpenAI-compatible inference server for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "inference", "quantization", "apple-silicon", "mlx", "speculative-decoding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.18",
    "mlx-lm>=0.19",
    "numpy>=1.26",
    "safetensors>=0.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=1.8",
    "huggingface-hub>=0.23",
    "transformers>=4.40",
    "zstandard>=0.22",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval>=0.4",
    "datasets>=2.18",
    "accelerate>=0.29",
    "sacrebleu",
    "rouge_score",
    "nltk",
]
dev = [
    "pytest>=8",
    "maturin>=1.5",
    "ruff>=0.4",
]

[project.urls]
"Homepage" = "https://github.com/wesleyscholl/squish"
"Bug Tracker" = "https://github.com/wesleyscholl/squish/issues"

[project.scripts]
squish        = "squish.cli:main"
squish-server = "squish.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["squish*"]

[tool.ruff]
line-length = 100
target-version = "py310"
