[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squish"
version = "1.0.0"
description = "Fast compressed model loader and OpenAI-compatible inference server for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "inference", "quantization", "apple-silicon", "mlx", "speculative-decoding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.18",
    "mlx-lm>=0.19",
    "numpy>=1.26",
    "safetensors>=0.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=1.8",
    "huggingface-hub>=0.23",
    "transformers>=4.40",
    "zstandard>=0.22",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
quant = []  # AWQ calibration uses only mlx+numpy (core deps); no extra packages needed.
            # Rust quantizer (squish_quant_rs/) must be built separately: maturin build
eval = [
    "lm-eval>=0.4",
    "datasets>=2.18",
    "accelerate>=0.29",
    "sacrebleu",
    "rouge_score",
    "nltk",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "maturin>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs-material>=9.5",
    "mkdocs-exclude>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/wesleyscholl/squish"
"Bug Tracker" = "https://github.com/wesleyscholl/squish/issues"
"Documentation" = "https://wesleyscholl.github.io/squish"

[project.scripts]
squish        = "squish.cli:main"
squish-server = "squish.server:main"
squish-convert = "squish.convert:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["squish*"]

[tool.setuptools]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line-length handled by formatter
    "B008",   # FastAPI Depends() calls in function args
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --tb=short"

[tool.coverage.run]
source = ["squish"]
branch = true
omit = [
    "squish/convert.py",
    "squish/streaming.py",
    "squish/speculative.py",
    "squish/squish_lm_eval.py",
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]
fail_under = 45

[tool.mypy]
python_version    = "3.10"
strict            = false
warn_unused_ignores = true
ignore_missing_imports = true
