[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squish"
version = "1.0.1"
description = "Fast compressed model loader and OpenAI-compatible inference server for Apple Silicon and Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "inference", "quantization", "apple-silicon", "mlx", "speculative-decoding", "linux", "torch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "safetensors>=0.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=1.8",
    "huggingface-hub>=0.23",
    "transformers>=4.40",
    "zstandard>=0.22",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
quant = []  # AWQ calibration uses only mlx+numpy (core deps); no extra packages needed.
            # Rust quantizer (squish_quant_rs/) must be built separately: maturin build
macos = [
    "mlx>=0.18",
    "mlx-lm>=0.19",
]
linux = [
    "torch>=2.2",
    "bitsandbytes>=0.43",
]
retrieval = [
    "hnswlib>=0.8",   # ANNS retrieval attention (Phase 2)
]
llmlingua = [
    "llmlingua>=0.2", # LLMLingua-2 prompt compression (Phase 4)
]
grammar = [
    "xgrammar>=0.1",  # XGrammar structured output engine (Phase B)
]
cache = [
    "sqlite-vec>=0.1",  # SquishSemanticCache sqlite-vec backend (Phase E3)
]
eval = [
    "lm-eval>=0.4",
    "datasets>=2.18",
    "accelerate>=0.29",
    "sacrebleu",
    "rouge_score",
    "nltk",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "maturin>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs-material>=9.5",
    "mkdocs-exclude>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/wesleyscholl/squish"
"Bug Tracker" = "https://github.com/wesleyscholl/squish/issues"
"Documentation" = "https://wesleyscholl.github.io/squish"

[project.scripts]
squish        = "squish.cli:main"
squish-server = "squish.server:main"
squish-convert = "squish.convert:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["squish*"]

[tool.setuptools]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line-length handled by formatter
    "B008",   # FastAPI Depends() calls in function args
    "E402",   # module-level import not at top (guard imports in large files)
    "E702",   # multiple statements on one line (compact local-var blocks)
    "E741",   # ambiguous variable name (l, I used in math/loop contexts)
    "B004",   # bare raise in except — allowed
    "B007",   # loop variable not used in body
    "B023",   # function does not bind loop variable
    "B904",   # raise without `from` inside except
    "F401",   # imported but unused (try/except availability checks)
    "F811",   # redefinition of unused name (re-export blocks in __init__.py)
    "F821",   # undefined name (forward-reference string annotations)
    "UP035",  # deprecated typing imports (dead after UP006/UP045 auto-fix; kept for compat)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --tb=short"

[tool.coverage.run]
source = ["squish"]
branch = true
omit = [
    "squish/convert.py",
    "squish/streaming.py",
    "squish/speculative.py",
    "squish/squish_lm_eval.py",
    "squish/minference_patch.py",
    "squish/paged_attention.py",
    "squish/prompt_compressor.py",
    "squish/vector_index.py",
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]
fail_under = 100

[tool.mypy]
python_version    = "3.10"
strict            = false
warn_unused_ignores = true
ignore_missing_imports = true
